--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,6 +23,12 @@ jobs:
         python -m pip install --upgrade pip
         pip install pytest
         pip install pytest pytest-cov
-    - name: Test with pytest
-      run: |
-        pytest
+    - name: Coverage Report
+      run: python -m pytest --cov=./ --cov-report=xml
+
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v2
+      with:
+        file: ./coverage.xml
+        # env_vars: PYTHON,
+        fail_ci_if_error: true
