--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,16 +8,13 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [3.10]
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python ${{ matrix.python-version }}
+    - name: Set up Python 3.10
       uses: actions/setup-python@v4
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: 3.10
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
