--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,7 +24,7 @@ jobs:
         pip install pytest
         pip install pytest pytest-cov
     - name: Coverage Report
-      run: python -m pytest --cov=./ --cov-report=xml
+      run: pytest --cov=./ --cov-report=xml
 
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v2
