--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,8 +23,11 @@ jobs:
         python -m pip install --upgrade pip
         pip install pytest
         pip install pytest pytest-cov
+        pip install -r requirements.txt
     - name: Coverage Report
-      run: python -m pytest --cov=./ --cov-report=xml
+      run: |
+        cd src
+        python -m pytest --cov=./ --cov-report=xml
 
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v2
